# community-health-task-investigator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
chti/: abnormal_task_perf_analyzer.py
examples/ona/: gen_ona_task_data.py
examples/ps/: .gitignore  README.md  analyze_ps_task_data.py  gen_ps_task_data.py
perf_tools/: principal_surprise.py
tests/: test_abnormal_task_perf_analyzer.py  test_examples.py  test_principal_surprise.py
