[tool.poetry]
name = "chti"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "^3.7"
plac = "^1.1"
scikit-learn = "^0.22.2"
jsonpickle = "^1.3"
matplotlib = "^3.2.1"
colorhash = "^1.0.2"
pandas = "^1.1.2"
numpy = "^1.19.2"
dask = "^2.26.0"
toolz = "^0.10.0"
fsspec = "^0.8.2"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pytest = "^5.3"
flake8 = "^3.7"
